--- a/src/pages/developing/angular-tutorial/wrapping-up.mdx
+++ b/src/pages/developing/angular-tutorial/wrapping-up.mdx
@@ -1,23 +1,32 @@
 ---
 title: Wrapping up
+description:
+  Welcome to Carbon! This tutorial will guide you in creating an Angular app
+  with the Carbon Design System.
 tabs:
   ['Overview', 'Step 1', 'Step 2', 'Step 3', 'Step 4', 'Step 5', 'Wrapping up']
 ---
 
-### Thanks for completing our tutorial and helping us improve it along the way. As a way to say thanks, you can apply for an IBM Digital Badge and a free shirt!
+<PageDescription>
+
+Thanks for completing our tutorial and helping us improve it along the way. If
+you want to show the world your new skills, you can apply for an IBM Digital
+Badge.
+
+</PageDescription>
 
 <AnchorLinks>
 
-<AnchorLink>Badging</AnchorLink>
-<AnchorLink>Free t-shirt</AnchorLink>
-<AnchorLink>Application</AnchorLink>
+<AnchorLink>Application form</AnchorLink>
+<AnchorLink>Badge information</AnchorLink>
 
 </AnchorLinks>
 
-## Badging
+## Application form
 
-Once you complete all five steps of the tutorial, you can apply for the IBM
-Digital Badge. These badges are available to anybody—not just IBM employees.
+Once you complete all five steps of the tutorial, you can apply for an
+[IBM Digital Badge](https://badges.carbondesignsystem.com). These badges are
+available to anybody who completes the tutorial, not just IBM employees.
 
 <Row>
 <Column colLg={8}>
@@ -29,27 +38,34 @@ Digital Badge. These badges are available to anybody—not just IBM employees.
 </Column>
 </Row>
 
-### IBM Design System Angular Components
+## Badge information
+
+### [IBM Carbon Design System Developer Essentials - Angular](https://www.youracclaim.com/org/ibm/badge/ibm-carbon-design-system-developer-essentials-angular)
 
 This badge demonstrates knowledge about Carbon's Angular components. To earn the
 badge:
 
-1. Complete steps 1 through 5 of the Angular Carbon tutorial
+1. Complete steps 1 through 5 of the Carbon Angular tutorial
    - Step 1. [Installing Carbon](/developing/angular-tutorial/step-1)
    - Step 2. [Building pages](/developing/angular-tutorial/step-2)
    - Step 3. [Using APIs](/developing/angular-tutorial/step-3)
    - Step 4. [Creating components](/developing/angular-tutorial/step-4)
    - Step 5. [Deploying to IBM Cloud](/developing/angular-tutorial/step-5)
-2. Submit links to approved pull requests for steps 1 through 5 of the Angular
-   Carbon tutorial in the
-   [carbon-tutorial-angular repository](https://github.com/carbon-design-system/carbon-tutorial-angular).
-   - To quickly find your submitted PRs, you can
-     [filter by author](https://github.com/carbon-design-system/carbon-tutorial-angular/pulls?utf8=%E2%9C%93&q=author%3Ausername)
-     (e.g. `author:${username}`)
+2. Have approved pull requests for steps 1 through 5 in the
+   [carbon-tutorial-angular repository](https://github.com/carbon-design-system/carbon-tutorial-angular)
+3. Complete the [badge application](https://badges.carbondesignsystem.com)
+
+<InlineNotification>
+
+**Note:** To quickly find your submitted PRs, you can
+[filter by author](https://github.com/carbon-design-system/carbon-tutorial-angular/pulls?utf8=%E2%9C%93&q=author%3Ausername)
+(e.g. `author:${username}`).
+
+</InlineNotification>
 
 ### FAQ and help
 
-Badge issuer contact: matt.rosno@ibm.com
+Badge issuer contact: matt.rosno@ibm.com.
 
 For questions related to your Acclaim badge earner account and profile, as well
 as issues related to claiming your badge after receiving a notification, go to
@@ -71,29 +87,7 @@ practices. The IBM Privacy Statement can be viewed here:
 employees can view the IBM Internal Privacy Statement here:
 [https://w3.ibm.com/w3publisher/w3-privacy-notice](https://w3.ibm.com/w3publisher/w3-privacy-notice).
 
-## Free t-shirt
+### Application form
 
-Submit your completed IBM Digital Badge application by March 27, 2020, and
-receive a free\* Carbon t-shirt.
-
-<Row>
-<Column colLg={8}>
-
-![](../shared/wrapping-up/images/carbon-tee.png)
-
-<Caption>Carbon t-shirt, #swag #threads #highfashion</Caption>
-
-</Column>
-</Row>
-
-## Application
-
-Complete the
-[application form](https://www.surveygizmo.com/s3/5215497/IBM-Carbon-Design-System-Developer-Essentials-Angular)
-to request the digital badge and t-shirt. Once you submit the application,
-please allow a few weeks for issuing the badge and 4-6 weeks to receive the
-t-shirt. Once the badge is issued, you will be notified and must accept the
-badge via Acclaim.
-
-_\* Shirts are available for a limited time while supplies last to U.S. shipping
-addresses and outside the U.S. to participating FED@IBM branches._
+To apply for the IBM Digital Badge, please complete the
+[form and survey](https://badges.carbondesignsystem.com).
